# metronome_ui_lvgl_pro

./: README.md
metronome_ui/: CMakeLists.txt  file_list_gen.cmake  globals.xml  metronome_ui.c  metronome_ui.h  metronome_ui_api.c  metronome_ui_api.h  metronome_ui_gen.c  metronome_ui_gen.h  project.xml
metronome_ui/components/beat_dot/: beat_dot.xml  beat_dot_gen.c  beat_dot_gen.h
metronome_ui/components/beat_setting/: beat_setting.xml  beat_setting_gen.c  beat_setting_gen.h
metronome_ui/components/bpm_scale/: bpm_scale.xml  bpm_scale_gen.c  bpm_scale_gen.h
metronome_ui/components/bpm_stepper/: bpm_stepper.xml  bpm_stepper_gen.c  bpm_stepper_gen.h
metronome_ui/components/tap_area/: tap_area.xml  tap_area_gen.c  tap_area_gen.h
metronome_ui/fonts/: font_gemunu_bold_20_data.c  font_gemunu_light_110_data.c  font_gemunu_light_130_data.c  font_gemunu_medium_60_data.c  font_oxanium_semibold_16_data.c  font_oxanium_semibold_20_data.c  font_oxanium_semibold_25_data.c
metronome_ui/images/: img_lvgl_logo_data.c  img_note_data.c  img_pause_data.c  img_play_data.c  img_scale_gradient_data.c
metronome_ui/preview-bin/: .hash  lved-runtime.js
metronome_ui/screens/screen_main/: screen_main.xml  screen_main_gen.c
metronome_ui/widgets/wd_beat_indicator/: wd_beat_indicator.c  wd_beat_indicator.h  wd_beat_indicator.xml  wd_beat_indicator_gen.c  wd_beat_indicator_gen.h  wd_beat_indicator_private_gen.h  wd_beat_indicator_xml_parser.c
